crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM115_SIM115.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- - kind:
      name: OpenFileWithContextHandler
      body: Use context handler for opening files
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 8
    fix: ~
    parent: ~
  - kind:
      name: OpenFileWithContextHandler
      body: Use context handler for opening files
      suggestion: ~
      fixable: false
    location:
      row: 31
      column: 8
    end_location:
      row: 31
      column: 12
    fix: ~
    parent: ~

