crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM118_SIM118.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
---
SIM118.py:1:1: SIM118 [*] Use `key in obj` instead of `key in obj.keys()`
  |
1 | key in obj.keys()  # SIM118
  | ^^^^^^^^^^^^^^^^^ SIM118
2 | 
3 | key not in obj.keys()  # SIM118
  |
  = help: Convert to `key in obj`

ℹ Suggested fix
1   |-key in obj.keys()  # SIM118
  1 |+key in obj  # SIM118
2 2 | 
3 3 | key not in obj.keys()  # SIM118
4 4 | 

SIM118.py:3:1: SIM118 [*] Use `key not in obj` instead of `key not in obj.keys()`
  |
1 | key in obj.keys()  # SIM118
2 | 
3 | key not in obj.keys()  # SIM118
  | ^^^^^^^^^^^^^^^^^^^^^ SIM118
4 | 
5 | foo["bar"] in obj.keys()  # SIM118
  |
  = help: Convert to `key not in obj`

ℹ Suggested fix
1 1 | key in obj.keys()  # SIM118
2 2 | 
3   |-key not in obj.keys()  # SIM118
  3 |+key not in obj  # SIM118
4 4 | 
5 5 | foo["bar"] in obj.keys()  # SIM118
6 6 | 

SIM118.py:5:1: SIM118 [*] Use `foo["bar"] in obj` instead of `foo["bar"] in obj.keys()`
  |
3 | key not in obj.keys()  # SIM118
4 | 
5 | foo["bar"] in obj.keys()  # SIM118
  | ^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
6 | 
7 | foo["bar"] not in obj.keys()  # SIM118
  |
  = help: Convert to `foo["bar"] in obj`

ℹ Suggested fix
2 2 | 
3 3 | key not in obj.keys()  # SIM118
4 4 | 
5   |-foo["bar"] in obj.keys()  # SIM118
  5 |+foo["bar"] in obj  # SIM118
6 6 | 
7 7 | foo["bar"] not in obj.keys()  # SIM118
8 8 | 

SIM118.py:7:1: SIM118 [*] Use `foo["bar"] not in obj` instead of `foo["bar"] not in obj.keys()`
  |
5 | foo["bar"] in obj.keys()  # SIM118
6 | 
7 | foo["bar"] not in obj.keys()  # SIM118
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
8 | 
9 | foo['bar'] in obj.keys()  # SIM118
  |
  = help: Convert to `foo["bar"] not in obj`

ℹ Suggested fix
4 4 | 
5 5 | foo["bar"] in obj.keys()  # SIM118
6 6 | 
7   |-foo["bar"] not in obj.keys()  # SIM118
  7 |+foo["bar"] not in obj  # SIM118
8 8 | 
9 9 | foo['bar'] in obj.keys()  # SIM118
10 10 | 

SIM118.py:9:1: SIM118 [*] Use `foo['bar'] in obj` instead of `foo['bar'] in obj.keys()`
   |
 7 | foo["bar"] not in obj.keys()  # SIM118
 8 | 
 9 | foo['bar'] in obj.keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
10 | 
11 | foo['bar'] not in obj.keys()  # SIM118
   |
   = help: Convert to `foo['bar'] in obj`

ℹ Suggested fix
6  6  | 
7  7  | foo["bar"] not in obj.keys()  # SIM118
8  8  | 
9     |-foo['bar'] in obj.keys()  # SIM118
   9  |+foo['bar'] in obj  # SIM118
10 10 | 
11 11 | foo['bar'] not in obj.keys()  # SIM118
12 12 | 

SIM118.py:11:1: SIM118 [*] Use `foo['bar'] not in obj` instead of `foo['bar'] not in obj.keys()`
   |
 9 | foo['bar'] in obj.keys()  # SIM118
10 | 
11 | foo['bar'] not in obj.keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
12 | 
13 | foo() in obj.keys()  # SIM118
   |
   = help: Convert to `foo['bar'] not in obj`

ℹ Suggested fix
8  8  | 
9  9  | foo['bar'] in obj.keys()  # SIM118
10 10 | 
11    |-foo['bar'] not in obj.keys()  # SIM118
   11 |+foo['bar'] not in obj  # SIM118
12 12 | 
13 13 | foo() in obj.keys()  # SIM118
14 14 | 

SIM118.py:13:1: SIM118 [*] Use `foo() in obj` instead of `foo() in obj.keys()`
   |
11 | foo['bar'] not in obj.keys()  # SIM118
12 | 
13 | foo() in obj.keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^ SIM118
14 | 
15 | foo() not in obj.keys()  # SIM118
   |
   = help: Convert to `foo() in obj`

ℹ Suggested fix
10 10 | 
11 11 | foo['bar'] not in obj.keys()  # SIM118
12 12 | 
13    |-foo() in obj.keys()  # SIM118
   13 |+foo() in obj  # SIM118
14 14 | 
15 15 | foo() not in obj.keys()  # SIM118
16 16 | 

SIM118.py:15:1: SIM118 [*] Use `foo() not in obj` instead of `foo() not in obj.keys()`
   |
13 | foo() in obj.keys()  # SIM118
14 | 
15 | foo() not in obj.keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^^^^^ SIM118
16 | 
17 | for key in obj.keys():  # SIM118
   |
   = help: Convert to `foo() not in obj`

ℹ Suggested fix
12 12 | 
13 13 | foo() in obj.keys()  # SIM118
14 14 | 
15    |-foo() not in obj.keys()  # SIM118
   15 |+foo() not in obj  # SIM118
16 16 | 
17 17 | for key in obj.keys():  # SIM118
18 18 |     pass

SIM118.py:17:5: SIM118 [*] Use `key in obj` instead of `key in obj.keys()`
   |
15 | foo() not in obj.keys()  # SIM118
16 | 
17 | for key in obj.keys():  # SIM118
   |     ^^^^^^^^^^^^^^^^^ SIM118
18 |     pass
   |
   = help: Convert to `key in obj`

ℹ Suggested fix
14 14 | 
15 15 | foo() not in obj.keys()  # SIM118
16 16 | 
17    |-for key in obj.keys():  # SIM118
   17 |+for key in obj:  # SIM118
18 18 |     pass
19 19 | 
20 20 | for key in list(obj.keys()):

SIM118.py:24:8: SIM118 [*] Use `k in obj` instead of `k in obj.keys()`
   |
22 |         del obj[key]
23 | 
24 | [k for k in obj.keys()]  # SIM118
   |        ^^^^^^^^^^^^^^^ SIM118
25 | 
26 | {k for k in obj.keys()}  # SIM118
   |
   = help: Convert to `k in obj`

ℹ Suggested fix
21 21 |     if some_property(key):
22 22 |         del obj[key]
23 23 | 
24    |-[k for k in obj.keys()]  # SIM118
   24 |+[k for k in obj]  # SIM118
25 25 | 
26 26 | {k for k in obj.keys()}  # SIM118
27 27 | 

SIM118.py:26:8: SIM118 [*] Use `k in obj` instead of `k in obj.keys()`
   |
24 | [k for k in obj.keys()]  # SIM118
25 | 
26 | {k for k in obj.keys()}  # SIM118
   |        ^^^^^^^^^^^^^^^ SIM118
27 | 
28 | {k: k for k in obj.keys()}  # SIM118
   |
   = help: Convert to `k in obj`

ℹ Suggested fix
23 23 | 
24 24 | [k for k in obj.keys()]  # SIM118
25 25 | 
26    |-{k for k in obj.keys()}  # SIM118
   26 |+{k for k in obj}  # SIM118
27 27 | 
28 28 | {k: k for k in obj.keys()}  # SIM118
29 29 | 

SIM118.py:28:11: SIM118 [*] Use `k in obj` instead of `k in obj.keys()`
   |
26 | {k for k in obj.keys()}  # SIM118
27 | 
28 | {k: k for k in obj.keys()}  # SIM118
   |           ^^^^^^^^^^^^^^^ SIM118
29 | 
30 | (k for k in obj.keys())  # SIM118
   |
   = help: Convert to `k in obj`

ℹ Suggested fix
25 25 | 
26 26 | {k for k in obj.keys()}  # SIM118
27 27 | 
28    |-{k: k for k in obj.keys()}  # SIM118
   28 |+{k: k for k in obj}  # SIM118
29 29 | 
30 30 | (k for k in obj.keys())  # SIM118
31 31 | 

SIM118.py:30:8: SIM118 [*] Use `k in obj` instead of `k in obj.keys()`
   |
28 | {k: k for k in obj.keys()}  # SIM118
29 | 
30 | (k for k in obj.keys())  # SIM118
   |        ^^^^^^^^^^^^^^^ SIM118
31 | 
32 | key in (obj or {}).keys()  # SIM118
   |
   = help: Convert to `k in obj`

ℹ Suggested fix
27 27 | 
28 28 | {k: k for k in obj.keys()}  # SIM118
29 29 | 
30    |-(k for k in obj.keys())  # SIM118
   30 |+(k for k in obj)  # SIM118
31 31 | 
32 32 | key in (obj or {}).keys()  # SIM118
33 33 | 

SIM118.py:32:1: SIM118 [*] Use `key in (obj or {})` instead of `key in (obj or {}).keys()`
   |
30 | (k for k in obj.keys())  # SIM118
31 | 
32 | key in (obj or {}).keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
33 | 
34 | (key) in (obj or {}).keys()  # SIM118
   |
   = help: Convert to `key in (obj or {})`

ℹ Suggested fix
29 29 | 
30 30 | (k for k in obj.keys())  # SIM118
31 31 | 
32    |-key in (obj or {}).keys()  # SIM118
   32 |+key in (obj or {})  # SIM118
33 33 | 
34 34 | (key) in (obj or {}).keys()  # SIM118
35 35 | 

SIM118.py:34:1: SIM118 [*] Use `(key) in (obj or {})` instead of `(key) in (obj or {}).keys()`
   |
32 | key in (obj or {}).keys()  # SIM118
33 | 
34 | (key) in (obj or {}).keys()  # SIM118
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ SIM118
35 | 
36 | from typing import KeysView
   |
   = help: Convert to `(key) in (obj or {})`

ℹ Suggested fix
31 31 | 
32 32 | key in (obj or {}).keys()  # SIM118
33 33 | 
34    |-(key) in (obj or {}).keys()  # SIM118
   34 |+(key) in (obj or {})  # SIM118
35 35 | 
36 36 | from typing import KeysView
37 37 | 

SIM118.py:48:1: SIM118 [*] Use `key in obj` instead of `key in obj.keys()`
   |
47 | # Regression test for: https://github.com/astral-sh/ruff/issues/7124
48 | key in obj.keys()and foo
   | ^^^^^^^^^^^^^^^^^ SIM118
49 | (key in obj.keys())and foo
50 | key in (obj.keys())and foo
   |
   = help: Convert to `key in obj`

ℹ Suggested fix
45 45 | 
46 46 | 
47 47 | # Regression test for: https://github.com/astral-sh/ruff/issues/7124
48    |-key in obj.keys()and foo
   48 |+key in obj and foo
49 49 | (key in obj.keys())and foo
50 50 | key in (obj.keys())and foo

SIM118.py:49:2: SIM118 [*] Use `key in obj` instead of `key in obj.keys()`
   |
47 | # Regression test for: https://github.com/astral-sh/ruff/issues/7124
48 | key in obj.keys()and foo
49 | (key in obj.keys())and foo
   |  ^^^^^^^^^^^^^^^^^ SIM118
50 | key in (obj.keys())and foo
   |
   = help: Convert to `key in obj`

ℹ Suggested fix
46 46 | 
47 47 | # Regression test for: https://github.com/astral-sh/ruff/issues/7124
48 48 | key in obj.keys()and foo
49    |-(key in obj.keys())and foo
   49 |+(key in obj)and foo
50 50 | key in (obj.keys())and foo

SIM118.py:50:1: SIM118 [*] Use `key in obj` instead of `key in obj.keys()`
   |
48 | key in obj.keys()and foo
49 | (key in obj.keys())and foo
50 | key in (obj.keys())and foo
   | ^^^^^^^^^^^^^^^^^^^ SIM118
   |
   = help: Convert to `key in obj`

ℹ Suggested fix
47 47 | # Regression test for: https://github.com/astral-sh/ruff/issues/7124
48 48 | key in obj.keys()and foo
49 49 | (key in obj.keys())and foo
50    |-key in (obj.keys())and foo
   50 |+key in obj and foo


