crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM201_SIM201.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
---
./resources/test/fixtures/flake8_simplify/SIM201.py:2:4: SIM201 [*] Use `a != b` instead of `not a == b`
  |
2 | # SIM201
3 | if not a == b:
  |    ^^^^^^^^^^ SIM201
4 |     pass
  |
  = help: Replace with `!=` operator

ℹ Suggested fix
1 1 | # SIM201
2   |-if not a == b:
  2 |+if a != b:
3 3 |     pass
4 4 | 
5 5 | # SIM201

./resources/test/fixtures/flake8_simplify/SIM201.py:6:4: SIM201 [*] Use `a != b + c` instead of `not a == b + c`
  |
6 | # SIM201
7 | if not a == (b + c):
  |    ^^^^^^^^^^^^^^^^ SIM201
8 |     pass
  |
  = help: Replace with `!=` operator

ℹ Suggested fix
3 3 |     pass
4 4 | 
5 5 | # SIM201
6   |-if not a == (b + c):
  6 |+if a != b + c:
7 7 |     pass
8 8 | 
9 9 | # SIM201

./resources/test/fixtures/flake8_simplify/SIM201.py:10:4: SIM201 [*] Use `a + b != c` instead of `not a + b == c`
   |
10 | # SIM201
11 | if not (a + b) == c:
   |    ^^^^^^^^^^^^^^^^ SIM201
12 |     pass
   |
   = help: Replace with `!=` operator

ℹ Suggested fix
7  7  |     pass
8  8  | 
9  9  | # SIM201
10    |-if not (a + b) == c:
   10 |+if a + b != c:
11 11 |     pass
12 12 | 
13 13 | # OK


