crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM202_SIM202.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    name: NegateNotEqualOp
    body: "Use `a == b` instead of `not a != b`"
    commit: "Replace with `==` operator"
    fixable: true
  location:
    row: 2
    column: 3
  end_location:
    row: 2
    column: 13
  fix:
    content: a == b
    location:
      row: 2
      column: 3
    end_location:
      row: 2
      column: 13
  parent: ~
- kind:
    name: NegateNotEqualOp
    body: "Use `a == b + c` instead of `not a != b + c`"
    commit: "Replace with `==` operator"
    fixable: true
  location:
    row: 6
    column: 3
  end_location:
    row: 6
    column: 19
  fix:
    content: a == b + c
    location:
      row: 6
      column: 3
    end_location:
      row: 6
      column: 19
  parent: ~
- kind:
    name: NegateNotEqualOp
    body: "Use `a + b == c` instead of `not a + b != c`"
    commit: "Replace with `==` operator"
    fixable: true
  location:
    row: 10
    column: 3
  end_location:
    row: 10
    column: 19
  fix:
    content: a + b == c
    location:
      row: 10
      column: 3
    end_location:
      row: 10
      column: 19
  parent: ~

