crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM211_SIM211.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
---
SIM211.py:1:5: SIM211 [*] Use `not ...` instead of `False if ... else True`
  |
1 | a = False if b else True  # SIM211
  |     ^^^^^^^^^^^^^^^^^^^^ SIM211
2 | 
3 | a = False if b != c else True  # SIM211
  |
  = help: Replace with `not ...`

ℹ Suggested fix
1   |-a = False if b else True  # SIM211
  1 |+a = not b  # SIM211
2 2 | 
3 3 | a = False if b != c else True  # SIM211
4 4 | 

SIM211.py:3:5: SIM211 [*] Use `not ...` instead of `False if ... else True`
  |
1 | a = False if b else True  # SIM211
2 | 
3 | a = False if b != c else True  # SIM211
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ SIM211
4 | 
5 | a = False if b + c else True  # SIM211
  |
  = help: Replace with `not ...`

ℹ Suggested fix
1 1 | a = False if b else True  # SIM211
2 2 | 
3   |-a = False if b != c else True  # SIM211
  3 |+a = not b != c  # SIM211
4 4 | 
5 5 | a = False if b + c else True  # SIM211
6 6 | 

SIM211.py:5:5: SIM211 [*] Use `not ...` instead of `False if ... else True`
  |
3 | a = False if b != c else True  # SIM211
4 | 
5 | a = False if b + c else True  # SIM211
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ SIM211
6 | 
7 | a = True if b else False  # OK
  |
  = help: Replace with `not ...`

ℹ Suggested fix
2 2 | 
3 3 | a = False if b != c else True  # SIM211
4 4 | 
5   |-a = False if b + c else True  # SIM211
  5 |+a = not b + c  # SIM211
6 6 | 
7 7 | a = True if b else False  # OK


