crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM212_SIM212.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- - kind:
      name: IfExprWithTwistedArms
      body: "Use `a if a else b` instead of `b if not a else a`"
      suggestion: "Replace with `a if a else b`"
      fixable: true
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 21
    fix:
      content: a if a else b
      location:
        row: 1
        column: 4
      end_location:
        row: 1
        column: 21
    parent: ~
  - kind:
      name: IfExprWithTwistedArms
      body: "Use `a if a else b + c` instead of `b + c if not a else a`"
      suggestion: "Replace with `a if a else b + c`"
      fixable: true
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 25
    fix:
      content: a if a else b + c
      location:
        row: 3
        column: 4
      end_location:
        row: 3
        column: 25
    parent: ~

