crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM220_SIM220.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
---
./resources/test/fixtures/flake8_simplify/SIM220.py:1:4: SIM220 [*] Use `False` instead of `a and not a`
  |
1 | if a and not a:
  |    ^^^^^^^^^^^ SIM220
2 |     pass
  |
  = help: Replace with `False`

ℹ Suggested fix
1   |-if a and not a:
  1 |+if False:
2 2 |     pass
3 3 | 
4 4 | if (a and not a) and b:

./resources/test/fixtures/flake8_simplify/SIM220.py:4:5: SIM220 [*] Use `False` instead of `a and not a`
  |
4 |     pass
5 | 
6 | if (a and not a) and b:
  |     ^^^^^^^^^^^ SIM220
7 |     pass
  |
  = help: Replace with `False`

ℹ Suggested fix
1 1 | if a and not a:
2 2 |     pass
3 3 | 
4   |-if (a and not a) and b:
  4 |+if (False) and b:
5 5 |     pass
6 6 | 
7 7 | if (a and not a) or b:

./resources/test/fixtures/flake8_simplify/SIM220.py:7:5: SIM220 [*] Use `False` instead of `a and not a`
   |
 7 |     pass
 8 | 
 9 | if (a and not a) or b:
   |     ^^^^^^^^^^^ SIM220
10 |     pass
   |
   = help: Replace with `False`

ℹ Suggested fix
4 4 | if (a and not a) and b:
5 5 |     pass
6 6 | 
7   |-if (a and not a) or b:
  7 |+if (False) or b:
8 8 |     pass
9 9 | 
10 10 | if a:


